# SSSL-food-security

./: .gitignore  LICENSE  README.md  finetune.py  pretrain.py  pretrain_then_finetune.py  pyproject.toml  random_forest.py  setup.py
config/: generate_comb_configs.py  generate_downstr_configs.py  generate_pretrain_configs.py
config/ipc/: debug.yaml
config/pretrain/: debug.yaml  overfit.yaml
config/pretrain_ipc/: ImageNet_resnet18_ALL.yaml  ImageNet_resnet18_RGB.yaml  debug.yaml  random_resnet18_ALL.yaml  random_resnet18_RGB.yaml  relres_resnet18_ALL.yaml  relres_resnet18_RGB.yaml
data/: predicting_food_crises_data_somalia_from2013-05-01.csv
data/SO_202006/: SO_202006_CS.dbf  SO_202006_ML1.dbf  SO_202006_ML2.dbf
data/SO_202010/: IDP_legend.lyr  SO_202010_CS.dbf  SO_202010_CS_IDP.dbf  SO_202010_ML1.dbf  SO_202010_ML1_IDP.dbf  SO_202010_ML2.dbf  SO_202010_ML2_IDP.dbf
data/SO_202102/: SO_202102_CS.dbf  SO_202102_ML1.dbf  SO_202102_ML2.dbf
data/SO_Admin2_1990/: SO_Admin2_1990.sbn  SO_Admin2_1990.sbx  SO_Admin2_1990.shp.xml
scripts/earth_engine/js/: export_somalia.js
scripts/preprocess/: build_indices.py  channel_mean_std.py  ipc_class_weights.py  make_h5.py  preprocess_ipc_csv.py  pseudo_random_order.py  search_tiles_not_enough_neighbors.py
scripts/results/: deeplift_shap_plots.py  less_data_future_plots.py  loss_and_threshold_plots.py  seasonality_plots.py  tile_ipc_plots.py
sssl/: config.py  utils.py
sssl/data/: ipc.py  landsat8.py
sssl/model/: backbone_model.py  backbone_module.py  ipc_model.py  ipc_module.py
